--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <audio id="menuclick">
+    <audio id="menuclick" controls preload="auto">
       <source src="click_menu.ogg" type="audio/ogg">
     </audio>
-    <audio id="click1">
+    <audio id="click1" controls preload="auto">
       <source src="click_1.ogg" type="audio/ogg">
     </audio>
   </body>
